2017-09-01  Julien Bect  <julien.bect@centralesupelec.fr>

	Overload left/right matrix division for stk_dataframe objects

	* arrays/@stk_dataframe/mldivide.m: New function.
	* arrays/@stk_dataframe/mrdivide.m: New function.
	* admin/octpkg/INDEX: Add new functions to the INDEX.

	stk_benchmark_predict.m: The boxplot function might be unavailable

	* misc/benchmarks/stk_benchmark_predict.m: Wrap call to boxplot in
	try-catch block, since the boxplot function might be unavailable.

	@stk_sampcrit_ei/set.m: Remove unnecessary assert

	* sampling/@stk_sampcrit_ei/set.m: Remove unnecessary assert,
	since only scalar output models are supported in STK at this time.

	Remove support for old-style .a structures

	* arrays/@stk_dataframe/private/get_column_number.c: Remove
	support for old-style .a structures.
	* misc/dist/stk_gpquadform.m: Idem.
	* arrays/@struct/double.m: Removed.
	* arrays/@struct/stk_boundingbox.m: Removed.
	* arrays/@struct/stk_length.m: Removed.
	* admin/octpkg/INDEX: Update.
	* arrays/@stk_dataframe/subsref.m: Remove unit tests.
	* core/@stk_model_gpposterior/stk_predict.m: Idem.
	* core/stk_predict.m: Idem.
	* arrays/generic/stk_feval.m: Idem.
	* covfcs/stk_expcov_aniso.m: Idem.
	* covfcs/stk_gausscov_aniso.m: Idem.
	* covfcs/stk_materncov32_aniso.m: Idem.
	* covfcs/stk_sphcov_aniso.m: Idem.
	* NEWS.md: Advertise.

2017-08-31  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_generate_samplepaths.m: Remove xtest for ticket #14

	* utils/stk_generate_samplepaths.m: Remove xtest for ticket #14
	since the problem as been solved, as expected, by the previous
	commit.

	Exact predictions at obs points for noiseless models (ticket #49)

	* core/@stk_model_gpposterior/stk_predict.m: Ensure exact
	prediction at observation points for noiseless models.
	* core/stk_predict.m: Change xtest to test.
	* sampling/@stk_sampcrit_eqi/feval.m: Fix EQI computation at the
	points where the variance is zero.

	Insert HTML version of AUTHORS.md in the documentation
