@@ -29,22 +29,38 @@
 function y = mldivide (x1, x2)
 
 if isa (x1, 'stk_dataframe')
+    
     x1_data = x1.data;
-    x1_colnames = x1.colnames;
-else
+    rownames = x1.colnames;
+    
+    if isa (x2, 'stk_dataframe')  % both are stk_dataframe objects
+        
+        x2_data = x2.data;
+        colnames = x2.colnames;
+        
+    else   % x1 is an stk_dataframe object, but not x2
+        
+        x2_data = x2;
+        colnames = {};
+        
+    end
+    
+else  % x2 is an stk_dataframe object, but x1 is not
+    
     x1_data = x1;
-    x1_colnames = {};
-end
-
-if isa (x2, 'stk_dataframe')
+    
     x2_data = x2.data;
-    x2_colnames = x2.colnames;
-else
-    x2_data = x2;
-    x2_colnames = {};
+    colnames = x2.colnames;
+    
+    if isscalar (x1)  % special case
+        rownames = x2.rownames;
+    else
+        rownames = {};
+    end
+    
 end
 
-y = stk_dataframe (x1_data \ x2_data, x2_colnames, x1_colnames);
+y = stk_dataframe (x1_data \ x2_data, colnames, rownames);
 
 end % function
 
@@ -55,3 +71,14 @@ end % function
 %! y = x1 \ x2;
 %! assert (isequal (y, ...
 %!     stk_dataframe (x1.data \ x2.data, {'u'; 'v'; 'w'; 'z'}, {'a'; 'b'})));
+
+
+% Special case: division by a scalar
+
+%!shared x, y
+%! x = stk_dataframe (rand (3, 2), {'x' 'y'}, {'a'; 'b'; 'c'});
+
+%!test y = 3 \ x;
+%!assert (isequal (y, stk_dataframe (3 \ x.data, {'x' 'y'}, {'a'; 'b'; 'c'})));
+
+%!error y = x \ 3;
