@@ -29,19 +29,40 @@
 function y = mtimes (x1, x2)
 
 if isa (x1, 'stk_dataframe')
+    
     x1_data = x1.data;
     rownames = x1.rownames;
-else
+    
+    if isa (x2, 'stk_dataframe')  % both are stk_dataframe objects
+        
+        x2_data = x2.data;
+        colnames = x2.colnames;
+        
+    else % x1 is an stk_dataframe object, but not x2
+        
+        x2_data = x2;
+        
+        if isscalar (x2)  % special case
+            colnames = x1.colnames;
+        else
+            colnames = {};
+        end
+        
+    end
+    
+else % x2 is an stk_dataframe object, but x1 is not
+    
     x1_data = x1;
-    rownames = {};
-end
-
-if isa (x2, 'stk_dataframe')
+    
     x2_data = x2.data;
     colnames = x2.colnames;
-else
-    x2_data = x2;
-    colnames = {};
+    
+    if isscalar (x1)  % special case
+        rownames = x2.rownames;
+    else
+        rownames = {};
+    end
+    
 end
 
 y = stk_dataframe (x1_data * x2_data, colnames, rownames);
@@ -63,3 +84,15 @@ end % function
 %!assert (isequal (z.data, w));
 %!assert (isequal (z.rownames, x.rownames));
 %!assert (isequal (z.colnames, y.colnames));
+
+
+% Special case: multiplication by a scalar
+
+%!shared x, y
+%! x = stk_dataframe (rand (3, 2), {'x' 'y'}, {'a'; 'b'; 'c'});
+
+%!test y = 3 * x;
+%!assert (isequal (y, stk_dataframe (3 * x.data, {'x' 'y'}, {'a'; 'b'; 'c'})));
+
+%!test y = x * 3;
+%!assert (isequal (y, stk_dataframe (3 * x.data, {'x' 'y'}, {'a'; 'b'; 'c'})));
